LIST OF CHANGES for npg_ranger project

  - set node recomended to >= 4.5.0 in package.json
  - add config-chain 1.1.11
  - upgrade moment to 2.15.1 from 2.14.1
  - upgrade mongodb to 2.2.10 from 2.2.8
  - upgrade tmp to 0.0.29 from 0.0.28
  - use npm 3.10.7 in travis
  - use node 4.5.0 in travis
  - kill all processes after -g seconds after client disconnection
  - Provide VCF files using freebayes
  - add new module to handle config options
  - fix error in interpreting the end range value in the user query
  - client library - an option to accept trailers and failing the overall
     request if data is truncated
  - client script - exit with error code if the request is unsuccessful
  - server - only set trailers if the client declared that it accepts them
  - restrict request types handled by teh server to GET and OPTIONS
  - add a separate handler for OPTIONS request, set CORS headers
  - read-only configuration when options are read from a command line
  - proxy-aware server configuration
  - validation for reference name user input
  - full cycle tests using bioinf tools, compiled tools cached in travis

release 0.3.0
  - publish as npm package
  - expand docs for installing and running client/server
  - upgrade mongodb from 2.2.4 to 2.2.8
  - upgrade grunt-jasmine-nodejs from 1.5.3 to 1.5.4
  - upgrade load-grunt-tasks from 'latest' to 3.5.2
  - fix wrongly reporting error while closing fd in client
  - compliance with the GA4GH API: redirection urls as objects
  - restructure documentation
  - upgrading moment to 2.14.1 from 2.13.0
  - upgrading grunt-jscs to 3.0.1 from 3.0.0
  - new client code to comply with GA4GH API
  - client code fit to use with browserify

release 0.2.1
  - compliance with the GA4GH API: use upper case for format

release 0.2.0
  - application model and controller as separate modules
  - GA4GH API url and redirection
  - logging with Winston

release 0.1.1
  - HTTP errors compliant with GA4GH API.

release 0.1
  - Initial version: