@@ -45,18 +45,20 @@ const optionsList = [
   ['r','references=PATH'  ,'PATH to dir containing reference repository'],
   ['s','skipauth'         ,'skip authorisation steps'],
   ['' ,'anyorigin'        ,'accept CORS requests from any origin'],
+  ['e','emaildomain'      ,'email domain to validate the remote user value against'],
   ['d','debug'            ,'debugging mode for this server'],
   ['h','help'             ,'display this help']
 ];
 
 const defaultOptions = {
-  config_ro:  false,
-  originlist: null,
-  proxylist:  null,
-  protocol:   DEFAULT_PROTOCOL,
-  hostname:   os.hostname() || 'localhost',
-  mongourl:   'mongodb://localhost:27017/imetacache',
-  timeout:    3,
+  config_ro:   false,
+  originlist:  null,
+  emaildomain: null,
+  proxylist:   null,
+  protocol:    DEFAULT_PROTOCOL,
+  hostname:    os.hostname() || 'localhost',
+  mongourl:    'mongodb://localhost:27017/imetacache',
+  timeout:     3,
   mongoopt: {
     db: {
       numberofRetries: 5
@@ -69,7 +71,7 @@ const defaultOptions = {
       }
     },
     replSet: {},
-    mongos: {}
+    mongos:  {}
   }
 };
 
