@@ -8,6 +8,8 @@
  *              Relies on data access group being known for each data
  *              source and the user having access to a whole set or subset
  *              of data access groups.
+ *              If the emaildomain configuration option is set, expects
+ *              the username to be an e-mail for the given domain.
  *
  * @example <caption>Example usage of the auth module.</caption>
  *   const DataAccess = require('../lib/server/auth.js');
@@ -42,8 +44,9 @@
  */
 
 const LOGGER       = require('winston');
-
 const EventEmitter = require('events');
+
+const config       = require('../config.js');
 
 const ACCESS_CONTROL_COLLECTION = 'access_control_group';
 const AUTH_EVENT_NAME           = 'authorised';
@@ -63,6 +66,24 @@ class DataAccess extends EventEmitter {
     this.db    = db;
   }
 
+  _getName(uname) {
+    uname = uname.trim();
+    if (uname) {
+      let domain = config.provide().get('emaildomain');
+      if (domain) {
+        // Allow alphanumerics, _, - and . in a username.
+        // Ensure special characters are properly escaped.
+        let re = new RegExp(
+          '([\\w\\.-]+)@' +
+          domain.replace(/\./g, '\\.')
+          + '$', 'im');
+        let result = uname.match(re);
+        uname = result ? result[1] : null;
+      }
+    }
+    return uname;
+  }
+
   /**
    * Authorise the user and emit an appropriate event.
    * @param username - username as a string
@@ -73,13 +94,21 @@ class DataAccess extends EventEmitter {
     if (!username) {
       throw new ReferenceError('Username is required');
     }
+    let original_username = username;
+    username = this._getName(username);
+    if (!username) {
+      this.emit(AUTH_FAILED_EVENT_NAME, original_username,
+        'Invalid user "' + original_username + '"');
+      return;
+    }
+
     if (!accessGroups || (accessGroups instanceof Array === false) ||
        (accessGroups.length === 0)) {
       throw new Error('Access groups array is not available');
     }
 
     if (!accessGroups.every( (id) => { return id; })) {
-      this.emit(AUTH_FAILED_EVENT_NAME, username,
+      this.emit(AUTH_FAILED_EVENT_NAME, original_username,
         'Some access group ids are not defined');
       return;
     }
@@ -97,13 +126,13 @@ class DataAccess extends EventEmitter {
 
     var countCallback = (err, count) => {
       if (err) {
-        this.emit(AUTH_FAILED_EVENT_NAME, username,
+        this.emit(AUTH_FAILED_EVENT_NAME, original_username,
           'Failed to get authorisation info, DB error: ' + err);
       } else {
         if (count == agroupIds.length) {
-          this.emit(AUTH_EVENT_NAME, username);
+          this.emit(AUTH_EVENT_NAME, original_username);
         } else {
-          this.emit(AUTH_FAILED_EVENT_NAME, username,
+          this.emit(AUTH_FAILED_EVENT_NAME, original_username,
             'Not authorised for ' + (count ? 'some' : 'any') + ' of the files');
         }
       }
