@@ -174,8 +174,9 @@ class RangerController {
         });
         da.once('failed', (username, message) => {
           da.removeAllListeners();
+          LOGGER.info(message);
           this.errorResponse(this.response, 403,
-            `Authorisation failed for user '${username}': ${message}`);
+            `Authorization failed for user '${username}'`);
         });
         da.authorise(user.username, data.map( (d) => {return d.accessGroup;} ));
       }
